--- a/loginDetails.yml
+++ b/loginDetails.yml
@@ -1,6 +1,6 @@
 user1:
   email: karthikvyas
-  password: omSAIram1@
+  password: ++**@
 user2:
   email: askvyas
-  password: omSAIram1@
+  password: **++@
